--- a/app/assets/stylesheets/product_category.css
+++ b/app/assets/stylesheets/product_category.css
@@ -78,7 +78,7 @@ a {
 }
 
 #categories {
-	border: 2px solid blue;
+	/*border: 2px solid blue;*/
 	width: 60%;
 	margin: 0 auto;
 }
